<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv_mascota"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_bottom"
    app:cardCornerRadius="@dimen/card_corner_radius"
    app:cardElevation="@dimen/card_elevation">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout_mascota"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_foto"
            android:layout_width="match_parent"
            android:layout_height="@dimen/foto_height"
            android:contentDescription="@string/desc_foto_mascota"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/perro6" />

        <ImageView
            android:id="@+id/iv_like"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:contentDescription="@string/desc_btn_like"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_foto"
            app:srcCompat="@drawable/bone" />

        <ImageView
            android:id="@+id/iv_likes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/desc_img_likes"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/iv_foto"
            app:layout_constraintTop_toBottomOf="@+id/iv_foto"
            app:srcCompat="@drawable/bone_yellow" />

        <TextView
            android:id="@+id/tv_nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/tv_nombre_mascota"
            android:textSize="@dimen/texto_nombre_tamano"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_like"
            app:layout_constraintTop_toBottomOf="@+id/iv_foto" />

        <TextView
            android:id="@+id/tv_likes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/numero_likes"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/iv_likes"
            app:layout_constraintTop_toBottomOf="@+id/iv_foto" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>



