<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv_foto_perfil"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_bottom"
    app:cardCornerRadius="@dimen/card_corner_radius"
    app:cardElevation="@dimen/card_elevation">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout_perfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_perfil_foto"
            android:layout_width="@dimen/foto_perfil"
            android:layout_height="@dimen/foto_perfil"
            android:contentDescription="@string/desc_foto_mascota"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/gato10" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_perfil_foto">

            <ImageView
                android:id="@+id/iv_perfil_likes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/tv_perfil_likes"
                android:contentDescription="@string/desc_img_likes"
                app:srcCompat="@drawable/bone_yellow" />

            <TextView
                android:id="@+id/tv_perfil_likes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/numero_likes"
                android:textSize="24sp" />
        </RelativeLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>

