<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".ContactoActivity">
    <include
        android:id="@+id/mi_action_bar"
        layout="@layout/actionbar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="@dimen/padding_start"
        android:paddingEnd="@dimen/padding_end"
        android:layout_marginTop="?attr/actionBarSize">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_nombre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ti_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_nombre" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_correo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_til"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_nombre">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ti_correo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_correo"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_comentario"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_til"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_correo">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ti_comentario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_comentario"
                android:inputType="textMultiLine" />
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btn_enviar_comentario"
        style="@style/RisedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_enviar_comentario"
        android:theme="@style/RisedButton"
        android:layout_gravity="bottom"
        android:onClick="enviarComentario"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>